# Cef3D CMakeLists.txt
cmake_minimum_required(VERSION 3.6.1)

set(PROJECT_NAME "Cef3D")
project(${PROJECT_NAME})

include(CMakeDependentOption)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake")

if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
  set(OS_MACOSX 1)
  set(OS_POSIX 1)
  add_definitions(-DPLATFORM_MACOSX)
elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
  set(OS_LINUX 1)
  set(OS_POSIX 1)
  add_definitions(-DPLATFORM_LINUX)
elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
  set(OS_WINDOWS 1)
  add_definitions(-DPLATFORM_WINDOWS)
endif()

set(PROJECT_ARCH_X64 0)

if(${CMAKE_SIZEOF_VOID_P} EQUAL 8)
	set(PROJECT_ARCH_X64 1)
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CEF3D_BUILD_DEBUG 1)
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Release")
    set(CEF3D_BUILD_RELEASE 1)
endif()

set(CEF_ROOT "${CMAKE_SOURCE_DIR}/Cef")

set(BINARY_PREFIX "")

if(OS_WINDOWS)
    set(BINARY_PREFIX "Win")
endif()

if(OS_LINUX)
	set(BINARY_PREFIX "Linux")
endif()

if(PROJECT_ARCH_X64 EQUAL 1)
    set(BINARY_PREFIX "${BINARY_PREFIX}64")
endif()

if(PROJECT_ARCH_X64 EQUAL 0)
    set(BINARY_PREFIX "${BINARY_PREFIX}86")
endif()

set(BINARY_OUTPUT_DIR ${PROJECT_SOURCE_DIR}/Cef3D/Binaries/${BINARY_PREFIX})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BINARY_OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BINARY_OUTPUT_DIR})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${BINARY_OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${BINARY_OUTPUT_DIR})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${BINARY_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${BINARY_OUTPUT_DIR})

option(CEF3D_SHARED_LIBS OFF)
CMAKE_DEPENDENT_OPTION(CEF3D_BUILD_DIRECT3D11_SAMPLE "Build OSR Direct3D 11 Sample App" ON "WIN32;" OFF)

add_subdirectory(Cef)
add_subdirectory(Cef3D/Source)
add_subdirectory(CefSubProcess)
add_subdirectory(Demos)